// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSONSchemaViewer - null type test 0 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <strong>
    type
  </strong>
   : 
  <strong>
    any
  </strong>
  <div
    style={
      {
        "marginTop": "var(--ifm-table-cell-padding)",
      }
    }
  >
    Always valid
  </div>
</details>
`;

exports[`JSONSchemaViewer - null type test 1 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <div
    className="tabs-container"
  >
    <ul
      aria-orientation="horizontal"
      className="tabs"
      role="tablist"
    >
      <li
        aria-selected={true}
        onClick={[Function]}
        tabIndex={0}
      >
        <span
          style={
            {
              "opacity": "0.6",
            }
          }
        >
          string
        </span>
      </li>
    </ul>
    <div>
      <div
        hidden={false}
        role="tabpanel"
      >
        <div
          role="tabpanel"
        >
          <strong>
            type
          </strong>
           : 
          <span
            style={
              {
                "opacity": "0.6",
              }
            }
          >
            string
          </span>
          <div
            style={
              {
                "marginTop": "var(--ifm-table-cell-padding)",
              }
            }
          >
            <div>
              ❓ 
              Nullable
            </div>
            <div>
              <strong>
                Possible values :
              </strong>
               
              <code>
                [null,"Some constant here ..."]
              </code>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</details>
`;
